linha 2 e otimizações do css

--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 	<main>
         <div class="linhas">
             <div class="linha L1">
-                <div class="avatar L1B1"></div>
-                <div class="avatar L1B2"></div>
-                <div class="avatar L1B3"></div>
-                <div class="avatar L1B4"></div>
+                <div class="avatar B1 L1C1"></div>
+                <div class="avatar B1 L1C2"></div>
+                <div class="avatar B1 L1C3"></div>
+                <div class="avatar B1 L1C4"></div>
+            </div>
+            <div class="linha L2">
+                <div class="avatar B2 L2C1"></div>
+                <div class="avatar B2 L2C2"></div>
+                <div class="avatar B2 L2C3"></div>
+                <div class="avatar B2 L2C4"></div>
             </div>
         </div>
     </main>
