--- a/index.html
+++ b/index.html
@@ -8,18 +8,24 @@
 </head>
 <body>
 	<main>
-        <div class="linhas">
-            <div class="linha L1">
-                <div class="avatar B1 L1C1"></div>
-                <div class="avatar B1 L1C2"></div>
-                <div class="avatar B1 L1C3"></div>
-                <div class="avatar B1 L1C4"></div>
+        <div class="tela">
+            <div class="linhas Linha1">
+                <div class="formas Bolas1 L1C1"></div>
+                <div class="formas Bolas1 L1C2"></div>
+                <div class="formas Bolas1 L1C3"></div>
+                <div class="formas Bolas1 L1C4"></div>
             </div>
-            <div class="linha L2">
-                <div class="avatar B2 L2C1"></div>
-                <div class="avatar B2 L2C2"></div>
-                <div class="avatar B2 L2C3"></div>
-                <div class="avatar B2 L2C4"></div>
+            <div class="linhas Linha2">
+                <div class="formas Bolas2 L2C1"></div>
+                <div class="formas Bolas2 L2C2"></div>
+                <div class="formas Bolas2 L2C3"></div>
+                <div class="formas Bolas2 L2C4"></div>
+            </div>
+            <div class="linhas Linha3">
+                <div class="formas Bolas3 L3C1"></div>
+                <div class="formas Bolas3 L3C2"></div>
+                <div class="formas Bolas3 L3C3"></div>
+                <div class="formas Bolas3 L3C4"></div>
             </div>
         </div>
     </main>
