--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>DisplayFlex</title>
-	<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DisplayFlex</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-	<main>
+    <main>
         <div class="tela">
             <div class="linhas Linha1">
                 <div class="formas Bolas1 L1C1"></div>
@@ -27,8 +29,15 @@
                 <div class="formas Bolas3 L3C3"></div>
                 <div class="formas Bolas3 L3C4"></div>
             </div>
+            <div class="linhas Linha4">
+                <div class="formas Bolas4 L4C1"></div>
+                <div class="formas Bolas4 L4C2"></div>
+                <div class="formas Bolas4 L4C3"></div>
+                <div class="formas Bolas4 L4C4"></div>
+            </div>
         </div>
     </main>
 
 </body>
+
 </html>
