--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
                 <div class="formas Bolas4 L4C3"></div>
                 <div class="formas Bolas4 L4C4"></div>
             </div>
+            <div class="linhas Linha5">
+                <div class="formas Bolas5 L5C1"></div>
+                <div class="formas Bolas5 L5C2"></div>
+                <div class="formas Bolas5 L5C3"></div>
+                <div class="formas Bolas5 L5C4"></div>
+            </div>
         </div>
     </main>
 
